--- a/project.config.json
+++ b/project.config.json
@@ -9,7 +9,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "1.6.6",
-	"appid": "wx36eb81c42b5553ac",
+	"appid": "",
 	"projectname": "88",
 	"condition": {
 		"search": {
